# backend

./: .gitignore  Cargo.toml  README.md  build-for-production.sh  config.json  config.xml
distribution/: config.xml  startup.sh
frontend/: .browserslistrc  angular.json  build-production.sh  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.module.ts
oracle/: Cargo.toml  build.rs
oracle/src/: connection.rs  dates.rs  environment.rs  implementors.rs  lib.rs  singulars.rs  sql_types.rs  statement.rs  types.rs  values.rs
oracle/src/oci/: bindings.rs  constants.rs  error.rs  functions.rs  mod.rs
oracle/src/statement/: memory.rs  mod.rs  params.rs  query.rs  results.rs
oracle_derive/: Cargo.toml
oracle_derive/src/: lib.rs  params.rs  query.rs  utils.rs
oracle_derive/src/internals/: ast.rs
server/: Cargo.toml
server/src/: application.rs  config.rs  datasource.rs  main.rs  setup.rs  utils.rs
server/src/application/: api_scope.rs  mgmt_scope.rs  mi_scope.rs  mod.rs  query.rs  security.rs
server/src/metainfo/: mod.rs  ora_source.rs  types.rs
server/src/security/: authorization.rs  identity.rs  mod.rs
src/: application.rs  config.rs  datasource.rs  main.rs  metainfo.rs  utils.rs
src/metainfo/: iterate_columns.rs  iterate_tables.rs  mod.rs  ora_source.rs  table_stream.rs  types.rs
utilities/teleport/: .inventory.yaml  README.MD  files.go  go.mod  go.sum  install.bat  inventory.go  main.go  utils.go
