[package]
name = "foundation"
version = "0.1.0"
authors = ["Dmitri Astafiev <demius.md@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = { version = "0.1.0", path = "./oracle" }
oracle_derive = { version = "0.1.0", path = "./oracle_derive" }

chrono = { version = "0.4", features = ["serde"] }
itertools = "0.9.0"
lazy_static = "1.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.20", features = [ "serialize" ] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true        # Enable link Time Optimization
panic = 'abort'   # Abort on panic
codegen-units = 2 # Parallel Codegeneration (default: 16)

## for full minification (strip debug symbols):
## strip target/release/foundation